--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,27 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar{
+    width: 8px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track{
+    background-color: #FFFFFF;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb{
+    background-color: #c4c4c4;
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #d9d9d9;
+}
+
 html, body {
     /* overflow-x:hidden  */
 }
